added post component

--- a/css/main.scss
+++ b/css/main.scss
@@ -59,5 +59,6 @@ $on-laptop:        800px;
         "base",
         "layout",
         "syntax-highlighting",
-        "gradient-bar"
+        "gradient-bar",
+        "components/post"
 ;
