--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -57,8 +57,16 @@
 }
 
 
+// sections
 
+.site-section {
+    @extend %clearfix;
+    padding-top: $h1-font-size;
+}
 
+.site-section-last {
+    padding-bottom: $h1-font-size;
+}
 
 
 
