--- a/css/main.scss
+++ b/css/main.scss
@@ -60,5 +60,9 @@ $on-laptop:        800px;
         "layout",
         "syntax-highlighting",
         "gradient-bar",
-        "components/post"
+        "components/post",
+        "components/project",
+        "components/ability"
+
+
 ;
