--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <ul>
     {% for link in site.links %}
     <li>
-      <a href="{{ link.url }}">{{ link.title }}</a>
+      <a href="{{ site.baseurl }} {{ link.url }}">{{ link.title }}</a>
     </li>
     {% endfor %}
   </ul>
@@ -12,6 +12,6 @@
 
 <header class="site-header gradient-bar">
 
-  <h1 class="site-title mega"><a href="/">design portfolio</a></h1>
+  <h1 class="site-title mega"><a href="{{ site.baseurl }}">design portfolio</a></h1>
   
 </header>
