--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,7 +1,7 @@
 <ul class="post-tags">
 	{% for tag in post.tags %}
 		<li>
-			<img src="/images/icon-{{tag}}.png" alt="{{ tag }} icon">
+			<img src="{{ site.baseurl }}/images/icon-{{tag}}.png" alt="{{ tag }} icon">
 		</li>
 	{% endfor %}
 </ul>
