--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,17 +10,17 @@
       <ul>
         <li>
           <a href="http://www.twitter.com/{{ site.twitter_username }}">
-            <img src="/images/twitter.png" alt="twitter logo" width="40">
+            <img src="{{ site.baseurl }}/images/twitter.png" alt="twitter logo" width="40">
           </a>
         </li>
         <li>
           <a href="http://www.github.com/{{ site.github_username }}">
-            <img src="/images/github.png" alt="github logo" width="40">
+            <img src="{{ site.baseurl }}/images/github.png" alt="github logo" width="40">
           </a>
         </li>
         <li>
           <a href="http://plus.google.com/{{ site.google_username }}">
-            <img src="/images/google.png" alt="google logo" width="40">
+            <img src="{{ site.baseurl }}/images/google.png" alt="google logo" width="40">
           </a>
         </li>
       </ul>
